[tool]
[tool.poetry]
name = "spangle"
version = "0.8.0"
description = "A small and flexible ASGI application framework for modern web."
license = "MIT"
authors = ["T.Kameyama <tkamenoko@vivaldi.net>"]
homepage = "https://github.com/tkamenoko/spangle"
repository = "https://github.com/tkamenoko/spangle"
documentation = "https://tkamenoko.github.io/spangle/"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.9"
addict = "^2.2.1"
aiofiles = "^0.6.0"
asgiref = "^3.2.3"
chardet = "^3.0.4"
httpx = "^0.16.1"
jinja2 = "^2.10.3"
multidict = "^5.1.0"
multipart = "^0.2"
parse = "^1.14.0"
starlette = "^0.14.1"
urllib3 = "^1.25.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.790"
rope = "^0.18.0"
mkdocs-material = "^6.1.6"
mkdocs = "^1.1.2"
inari = "^0.1.1"
hypercorn = "^0.11.1"
uvloop = "^0.14.0"
black = "^20.8b1"
poethepoet = "^0.9.0"
ward = "^0.48.0-beta.0"
coverage = "^5.2.1"

[tool.poetry.scripts]
spangle = "spangle.cli.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
test = "coverage run --source spangle -m ward --path tests"
report = "coverage report"
doc-build = "mkdocs build"
doc-serve = "mkdocs serve"
