[tool]
[tool.poetry]
name = "spangle"
version = "0.9.1"
description = "A small and flexible ASGI application framework for modern web."
license = "MIT"
authors = ["T.Kameyama <tkamenoko@vivaldi.net>"]
homepage = "https://github.com/tkamenoko/spangle"
repository = "https://github.com/tkamenoko/spangle"
documentation = "https://tkamenoko.github.io/spangle/"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.9"
addict = "^2.2.1"
aiofiles = "^0.7.0"
asgiref = "^3.4.1"
chardet = "^4.0.0"
httpx = "^0.18.2"
jinja2 = "^3.0.1"
multidict = "^5.1.0"
multipart = "^0.2.4"
parse = "^1.19.0"
starlette = "^0.15.0"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
rope = "^0.19.0"
mkdocs-material = "^7.1.9"
mkdocs = "^1.2.1"
inari = "^0.2.1"
hypercorn = "^0.11.2"
uvloop = "^0.15.2"
black = "^21.6b0"
poethepoet = "^0.10.0"
ward = "^0.63.0b0"
coverage = "^5.5"
mkdocs-literate-nav = "^0.4.0"

[tool.poetry.scripts]
spangle = "spangle.cli.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.ward]
path = ["tests"]
order = "random"
show-diff-symbols = true

[tool.poe.tasks]
test = "coverage run --source spangle -m ward"
types = "mypy ./spangle/"
report = "coverage report"
"doc:build" = "mkdocs build"
"doc:serve" = "mkdocs serve"
