[tool]
[tool.poetry]
name = "spangle"
version = "0.11.1"
description = "A small and flexible ASGI application framework for modern web."
license = "MIT"
authors = ["T.Kameyama <tkamenoko@vivaldi.net>"]
homepage = "https://github.com/tkamenoko/spangle"
repository = "https://github.com/tkamenoko/spangle"
documentation = "https://tkamenoko.github.io/spangle/"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.9"
addict = "^2.2.1"
aiofiles = "^0.7.0"
asgiref = "^3.4.1"
chardet = "^4.0.0"
httpx = "^0.21.1"
jinja2 = "^3.0.1"
multipart = "^0.2.4"
parse = "^1.19.0"
starlette = "^0.17.1"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
rope = "^0.21.1"
mkdocs-material = "^7.3.6"
mkdocs = "^1.2.3"
inari = "^0.2.1"
hypercorn = "^0.12.0"
uvloop = "^0.16.0"
black = "^21.11b1"
poethepoet = "^0.11.0"
ward = "^0.65.0b0"
coverage = "^6.1.2"
mkdocs-literate-nav = "^0.4.0"

[tool.poetry.scripts]
spangle = "spangle.cli.run:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ward]
path = ["tests"]
order = "random"
show-diff-symbols = true

[tool.poe.tasks]
test = "coverage run --source spangle -m ward"
types = "mypy ./spangle/"
report = "coverage report"
"doc:build" = "mkdocs build"
"doc:serve" = "mkdocs serve"
